# varint

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml
cmake/: varintConfig.cmake
test/: CMakeLists.txt  uleb128_test.cpp  varint_test.cpp
varint/: array.cpp  array.h  basic_varint.cpp  basic_varint.h  uleb128.cpp  uleb128.h  varint.cpp  varint.h
varint/codecs/: uleb128.cpp  uleb128.h
varint/detail/: extent_type.cpp  extent_type.h
